sandc/test/fixtures/pbtRegression/shouldSucceed/manyFilesSamePackage/Qux.sand
pub class Qux {
    use foo.Baz;

    bar: foo.Bar;
    baz: Baz;
}