sandc/test/fixtures/pbtRegression/shouldFail/implicitShadowing/use/Use.sand
pub class Use {
    use java.util.ArrayList;
    use rlist as ArrayList;
}